change. 将、取消鉴权，更改暴露方式
